# ActivityBot

./: .gitignore  bot.py  database.py  dockerfile  pyproject.toml  queries.py  update_database.py
activitybot/: activities.py  bot.py  config.py  database.py  filters.py  in_range.py  main.py  queries.py  translations.py
activitybot/db/: database.db
activitybot/migrations/: 2.py  3.py
